🩹 Fix typo (transition -> transform)

--- a/styles/mixins/_positions.scss
+++ b/styles/mixins/_positions.scss
@@ -2,7 +2,7 @@
   @if ($type == fixed or $type == absolute) {
     position: $type;
     left: 50%;
-    transition: translateX(-50%);
+    transform: translateX(-50%);
   }
 }
 
@@ -10,7 +10,7 @@
   @if ($type == fixed or $type == absolute) {
     position: $type;
     top: 50%;
-    transition: translateY(-50%);
+    transform: translateY(-50%);
   }
 }
 
@@ -19,6 +19,6 @@
     position: $type;
     top: 50%;
     left: 50%;
-    transition: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
   }
 }
