💄 Update glabal.scss for hidden options

--- a/styles/base/_global.scss
+++ b/styles/base/_global.scss
@@ -21,3 +21,15 @@
     display: none !important;
   }
 }
+
+.sm-hidden {
+  @media screen and (max-width: $md-breakpoint - 1) {
+    display: none !important;
+  }
+}
+
+.lg-hidden {
+  @media screen and (min-width: $lg-breakpoint) {
+    display: none !important;
+  }
+}
