--- a/styles/main.scss
+++ b/styles/main.scss
@@ -21,5 +21,7 @@
 @import './modules/forms';
 @import './modules/pagination';
 
+@import './components/gnb-nav';
+
 @import './layouts/grids';
 @import './layouts/gnb';
