♻️ Create a separate file for gnb-icon-buttons and rename modifiers

--- a/styles/layouts/_gnb.scss
+++ b/styles/layouts/_gnb.scss
@@ -12,21 +12,9 @@
       @include flexbox(end);
     }
 
-    .gnb-search-button {
+    .gnb-icon-button.is-search {
       margin-right: 4px;
     }
-  }
-
-  &-icon-button {
-    @include flexbox;
-    width: 32px;
-    height: 32px;
-    font-size: 24px;
-    color: $secondary;
-  }
-
-  &-menu-button {
-    color: $blue;
   }
 
   .logo {
@@ -56,10 +44,6 @@
 
       .gnb-icon-button-group {
         margin-right: 24px;
-
-        .gnb-search-button {
-          margin-right: 0;
-        }
 
         .gnb-icon-button {
           margin-right: 8px;
