--- a/styles/components/_gnb-nav.scss
+++ b/styles/components/_gnb-nav.scss
@@ -1,18 +1,34 @@
 .gnb-nav {
+  $padding: 8px;
+
   &-list {
     @include flexbox(start);
   }
 
   &-item {
-    margin-right: 24px;
+    margin-right: 24px - 2 * ($padding);
+
+    &.is-active,
+    &:hover {
+      a {
+        color: $blue;
+      }
+    }
 
     &:last-child {
       margin-right: 0;
     }
 
+    &:first-child {
+      margin-left: -$padding;
+    }
+
     a {
       @include text-style(18, $primary);
+      display: block;
+      padding: $padding;
       font-weight: 700;
+      transition: color 200ms ease-in-out;
     }
   }
 }
