--- a/styles/components/_gnb-icon-buttons.scss
+++ b/styles/components/_gnb-icon-buttons.scss
@@ -1,10 +1,12 @@
 .gnb-icon-button {
   @include flexbox;
+  position: relative;
   width: 32px;
   height: 32px;
   font-size: 24px;
   color: $secondary;
-  transition: color 200ms ease-in-out;
+  border-radius: 50%;
+  transition: color 200ms ease-in-out, background-color 200ms ease-in-out;
 
   &.is-menu {
     color: $blue;
@@ -16,5 +18,39 @@
 
   &:active {
     color: $primary;
+  }
+
+  .badge {
+    $badge-size: 16px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    display: block;
+    height: $badge-size;
+    min-width: $badge-size;
+    padding: 0 4px;
+    font-size: 10px;
+    font-weight: 700;
+    line-height: 16px;
+    letter-spacing: -0.01em;
+    color: $white;
+    text-align: center;
+    background-color: $red;
+    border-radius: $badge-size / 2;
+  }
+
+  @include responsive(T) {
+    &:hover {
+      color: $white;
+      background-color: $blue;
+    }
+  }
+
+  &.is-cart {
+    i {
+      position: relative;
+      top: 1px;
+      right: 1px;
+    }
   }
 }
