--- a/styles/components/_my-menu.scss
+++ b/styles/components/_my-menu.scss
@@ -51,4 +51,19 @@
       }
     }
   }
+
+  &-button {
+    .avatar-32 {
+      img {
+        border: 3px solid $white;
+        border-radius: 50%;
+        transition: border-color 200ms ease-in-out;
+
+        &:hover,
+        &:active {
+          border: 3px solid $blue;
+        }
+      }
+    }
+  }
 }
