🩹 Fix text-style of my-menu-item

--- a/styles/components/_my-menu.scss
+++ b/styles/components/_my-menu.scss
@@ -41,6 +41,7 @@
     button {
       width: 100%;
       @include flexbox(start);
+      @include text-style(16, $primary);
       height: 44px;
       padding: 0 8px;
       transition: background-color 200ms ease-in-out;
