--- a/styles/modules/_avatars.scss
+++ b/styles/modules/_avatars.scss
@@ -1,6 +1,9 @@
 %avatar-base {
   display: block;
   overflow: hidden;
+  background-image: url('assets/image/img-user-default.png');
+  background-repeat: no-repeat;
+  background-size: contain;
   border-radius: 50%;
 
   img {
