--- a/styles/layouts/_sidebar.scss
+++ b/styles/layouts/_sidebar.scss
@@ -48,6 +48,18 @@
         white-space: nowrap;
       }
     }
+
+    &-menu {
+      margin-top: 16px;
+    }
+
+    &-menu-item {
+      @include flexbox(start);
+      @include text-style(14, $primary);
+      width: 100%;
+      height: 36px;
+      padding: 0 12px;
+    }
   }
 
   &-auth {
