--- a/styles/layouts/_sidebar.scss
+++ b/styles/layouts/_sidebar.scss
@@ -1,7 +1,14 @@
 .sidebar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: $sidebar-level;
   width: 240px;
+  height: 100vh;
   padding: 32px 20px;
+  overflow-y: auto;
   background-color: $white;
+  overscroll-behavior: contain;
 
   &-header {
     padding: 0 12px;
@@ -69,5 +76,9 @@
     a {
       width: 84px;
     }
+  }
+
+  &::-webkit-scrollbar {
+    display: none;
   }
 }
