--- a/styles/layouts/_search-modal.scss
+++ b/styles/layouts/_search-modal.scss
@@ -7,6 +7,8 @@
   height: 100vh;
   padding: 12px 0;
   background-color: $white;
+  transform: translate3d(100%, 0, 0);
+  transition: transform 300ms ease-in-out;
 
   &-header {
     margin-bottom: 20px;
@@ -25,5 +27,9 @@
     flex-shrink: 0;
     width: 56px;
     margin-left: 8px;
+  }
+
+  &.is-active {
+    transform: translate3d(0, 0, 0);
   }
 }
