--- a/styles/components/_my-menu.scss
+++ b/styles/components/_my-menu.scss
@@ -2,11 +2,30 @@
   $tooltip-size: 11px;
   position: relative;
 
+  &.is-active {
+    .my-menu-button {
+      .avatar-32 {
+        border: 3px solid $blue;
+      }
+    }
+
+    .my-menu-content {
+      opacity: 1;
+      visibility: visible;
+      transform: translate3d(-50%, 0, 0);
+    }
+  }
+
   &-content {
     @include position-center-x;
     top: #{$tooltip-size * 4};
     border-radius: 4px;
+    opacity: 0;
+    visibility: hidden;
+    transform: translate3d(-50%, -10px, 0);
     box-shadow: $dropdown-shadow;
+    transition: transform 300ms ease-in-out, visibility 300ms ease-in-out,
+      opacity 300ms ease-in-out;
 
     &::before,
     &::after {
@@ -58,8 +77,7 @@
       border: 3px solid $white;
       transition: border-color 200ms ease-in-out;
 
-      &:hover,
-      &.is-active {
+      &:hover {
         border: 3px solid $blue;
       }
     }
