--- a/styles/layouts/_lnb.scss
+++ b/styles/layouts/_lnb.scss
@@ -1,13 +1,16 @@
 .lnb {
-  overflow-x: auto;
+  $lnb-height: 40px;
+  $lnb-link-padding: 8px;
+  $grid-margin: $sm-margin + $gutter / 2;
 
+  overflow-x: auto;
   overscroll-behavior: contain;
 
   &-list {
     @include inline-flexbox(start);
-    height: 40px;
-    padding: 0 7px;
-    margin-left: -15px;
+    height: $lnb-height;
+    padding: 0 #{$grid-margin - $lnb-link-padding};
+    margin-left: -#{$grid-margin};
     white-space: nowrap;
     border-bottom: 1px solid $border;
   }
@@ -16,8 +19,8 @@
     a {
       @include inline-flexbox;
       @include text-style(13, $dark);
-      height: 40px;
-      padding: 10px 8px;
+      height: $lnb-height;
+      padding: 0 $lnb-link-padding;
       font-weight: 700;
       border-bottom: 2px solid transparent;
     }
@@ -27,10 +30,6 @@
         color: $blue;
         border-bottom: 2px solid $blue;
       }
-    }
-
-    .ic-new {
-      color: $red;
     }
   }
 
