--- a/styles/layouts/_sidebar.scss
+++ b/styles/layouts/_sidebar.scss
@@ -1,5 +1,7 @@
 .sidebar {
   $sidebar-width: 240px;
+
+  @include no-scrollbar;
   position: fixed;
   top: 0;
   left: 0;
@@ -83,9 +85,5 @@
     a {
       width: 84px;
     }
-  }
-
-  &::-webkit-scrollbar {
-    display: none;
   }
 }
