💄 Create a constant file for managing dimensions

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -3,6 +3,7 @@
 @import './constants/breakpoint';
 @import './constants/box-shadows';
 @import './constants/z-indexes';
+@import './constants/dimensions';
 
 @import './base/fonts';
 @import './base/normalize';
@@ -37,3 +38,4 @@
 @import './layouts/search-modal';
 @import './layouts/lnb';
 @import './layouts/global-foot';
+@import './layouts/global-header';
