--- a/styles/layouts/_gnb.scss
+++ b/styles/layouts/_gnb.scss
@@ -2,6 +2,7 @@
   position: relative;
   background-color: $white;
   border-bottom: 1px solid $border;
+  z-index: $gnb-level;
 
   &-wrapper {
     @include flexbox(between);
