--- a/styles/components/_product-carousel.scss
+++ b/styles/components/_product-carousel.scss
@@ -1,9 +1,52 @@
 .product-carousel {
-  .slider-list {
-    img {
-      display: block;
-      width: 200px;
-      height: auto;
+  position: relative;
+  $grid-margin: 15px;
+
+  &-slider {
+    margin: 0 -#{$grid-margin};
+  }
+
+  &-thumbnail {
+    @include position-center-x;
+    bottom: 16px;
+
+    .thumbnail-list {
+      @include flexbox;
+
+      .thumbnail-item {
+        @include flexbox;
+        margin-right: 8px;
+
+        &:last-child {
+          margin-right: 0;
+        }
+
+        &.tns-nav-active {
+          button {
+            opacity: 1;
+            transform: scale(1.3333);
+          }
+        }
+
+        button {
+          width: 6px;
+          height: 6px;
+          background-color: $white;
+          border-radius: 50%;
+          opacity: 0.7;
+          transition: all 100ms ease-in-out;
+        }
+
+        img {
+          display: none;
+        }
+      }
     }
+  }
+
+  img {
+    display: block;
+    width: 100%;
+    height: auto;
   }
 }
