--- a/styles/main.scss
+++ b/styles/main.scss
@@ -15,11 +15,11 @@
 @import './mixins/positions';
 @import './mixins/flexbox';
 @import './mixins/scrollbar';
+@import './mixins/star-ratings';
 
 @import './modules/icon';
 @import './modules/tags';
 @import './modules/avatars';
-@import './modules/star-ratings';
 @import './modules/prices';
 @import './modules/buttons';
 @import './modules/forms';
