--- a/styles/components/_order-form.scss
+++ b/styles/components/_order-form.scss
@@ -13,6 +13,18 @@
     margin-bottom: 20px;
   }
 
+  .order-checkout {
+    margin-bottom: 20px;
+
+    .checkout-item {
+      margin-bottom: 8px;
+
+      &:last-child {
+        margin-bottom: 0;
+      }
+    }
+  }
+
   .order-summary {
     @include flexbox(between);
     margin-bottom: 20px;
@@ -27,9 +39,9 @@
     @include flexbox;
 
     button {
-      margin-right: 8px;
       flex-basis: 0;
       flex-grow: 1;
+      margin-right: 8px;
 
       &:last-child {
         margin-right: 0;
