--- a/styles/layouts/_product-tab.scss
+++ b/styles/layouts/_product-tab.scss
@@ -42,7 +42,7 @@
   }
 
   @include responsive(T) {
-    top: $gnb-height-md + $lnb-height-md;
+    top: $gnb-height-md + $lnb-height-md - 1px;
     height: 54px;
     background-color: $background;
     border-bottom: 0;
