--- a/styles/main.scss
+++ b/styles/main.scss
@@ -4,6 +4,7 @@
 @import './constants/box-shadows';
 @import './constants/z-indexes';
 @import './constants/dimensions';
+@import './constants/grids';
 
 @import './base/fonts';
 @import './base/normalize';
@@ -39,7 +40,7 @@
 @import './components/product-section-header';
 @import './components/product-table';
 
-@import './layouts/grids';
+@import './layouts/grid';
 @import './layouts/gnb';
 @import './layouts/sidebar';
 @import './layouts/overlay';
