--- a/styles/components/_review-scoreboard.scss
+++ b/styles/components/_review-scoreboard.scss
@@ -11,7 +11,8 @@
   }
 
   .score-summary {
-    @include column-flexbox;
+    @include flexbox;
+    flex-direction: column;
     order: 1;
 
     .average-score {
@@ -27,6 +28,7 @@
 
   .score-detail {
     order: 3;
+    text-align: center;
   }
 
   &::before {
@@ -36,5 +38,33 @@
     height: 96px;
     background-color: $border;
     content: '';
+  }
+
+  @include responsive(T) {
+    height: 148px;
+    padding: 0 72px;
+
+    .score-summary,
+    .score-detail {
+      width: auto;
+    }
+
+    .score-summary {
+      flex-direction: row-reverse;
+
+      .star-rating {
+        margin-right: 16px;
+        font-size: 24px;
+      }
+
+      .average-score {
+        margin-bottom: 0;
+      }
+    }
+
+    &::before {
+      height: 72px;
+      margin: 0 69px;
+    }
   }
 }
