--- a/styles/components/_review-card.scss
+++ b/styles/components/_review-card.scss
@@ -45,6 +45,21 @@
   &-body {
     @include text-style(13, $primary);
     margin-top: 20px;
+
+    .review-image {
+      width: 64px;
+      height: 64px;
+      margin-bottom: 8px;
+      overflow: hidden;
+      border-radius: 4px;
+
+      img {
+        display: block;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+    }
   }
 
   &-footer {
@@ -54,6 +69,12 @@
     button {
       width: 120px;
       margin-right: 8px;
+
+      i {
+        margin: 0 4px 0 -8px;
+        font-size: 20px;
+        color: $white;
+      }
     }
 
     p {
@@ -85,6 +106,12 @@
     &-body {
       p {
         @include text-style(14);
+      }
+
+      .review-image {
+        width: 112px;
+        height: 112px;
+        margin-bottom: 16px;
       }
     }
 
