--- a/styles/main.scss
+++ b/styles/main.scss
@@ -43,6 +43,7 @@
 @import './components/review-scoreboard';
 @import './components/score-stats';
 @import './components/review-card';
+@import './components/product-review';
 
 @import './layouts/grid';
 @import './layouts/gnb';
