--- a/styles/components/_product-review.scss
+++ b/styles/components/_product-review.scss
@@ -6,4 +6,19 @@
       border-bottom: 0;
     }
   }
+
+  .review-empty {
+    @include text-style(16, $secondary);
+    padding: 36px 0;
+    text-align: center;
+
+    strong {
+      font-weight: 700;
+      color: $blue;
+    }
+
+    @include responsive(T) {
+      padding: 16px 0;
+    }
+  }
 }
