--- a/styles/components/_score-stats.scss
+++ b/styles/components/_score-stats.scss
@@ -29,7 +29,7 @@
       border-radius: 10px;
 
       .active-bar {
-        width: 70%;
+        width: 0;
         height: 100%;
         background-color: $blue;
         border-radius: 10px;
