--- a/styles/components/_score-stats.scss
+++ b/styles/components/_score-stats.scss
@@ -33,6 +33,8 @@
         height: 100%;
         background-color: $blue;
         border-radius: 10px;
+        animation-duration: 1000ms;
+        animation-name: slide-active-bar;
       }
     }
 
@@ -54,5 +56,15 @@
         margin-right: 8px;
       }
     }
+  }
+}
+
+@keyframes slide-active-bar {
+  0% {
+    transform: translate3d(-100%, 0, 0);
+  }
+
+  100% {
+    transform: translate3d(0, 0, 0);
   }
 }
