--- a/styles/base/_fonts.scss
+++ b/styles/base/_fonts.scss
@@ -1,11 +1,11 @@
 // scss-lint:disable all
 @font-face {
   font-family: 'tomorrow';
-  src: url('assets/fonts/tomorrow.eot');
-  src: url('assets/fonts/tomorrow.eot') format('embedded-opentype'),
-    url('assets/fonts/tomorrow.ttf') format('truetype'),
-    url('assets/fonts/tomorrow.woff') format('woff'),
-    url('assets/fonts/tomorrow.svg?#tomorrow') format('svg');
+  src: url('/assets/fonts/tomorrow.eot');
+  src: url('/assets/fonts/tomorrow.eot') format('embedded-opentype'),
+    url('/assets/fonts/tomorrow.ttf') format('truetype'),
+    url('/assets/fonts/tomorrow.woff') format('woff'),
+    url('/assets/fonts/tomorrow.svg?#tomorrow') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
