--- a/styles/main.scss
+++ b/styles/main.scss
@@ -46,6 +46,7 @@
 @import './components/product-review';
 @import './components/inquiry-card';
 @import './components/product-inquiry';
+@import './components/product-shipment';
 
 @import './layouts/grid';
 @import './layouts/gnb';
