--- a/styles/main.scss
+++ b/styles/main.scss
@@ -47,6 +47,8 @@
 @import './components/inquiry-card';
 @import './components/product-inquiry';
 @import './components/product-shipment';
+@import './components/product-card';
+@import './components/product-recommendation';
 
 @import './layouts/grid';
 @import './layouts/gnb';
