--- a/styles/components/_product-card.scss
+++ b/styles/components/_product-card.scss
@@ -1,13 +1,19 @@
 .product-card {
   &-image {
+    position: relative;
+    width: 100%;
+    height: 0;
+    padding-bottom: 100%; //종횡비 유지
     border-radius: 4px;
     overflow: hidden;
     margin-bottom: 8px;
 
     img {
+      @include position-center;
       display: block;
       width: 100%;
-      height: auto;
+      height: 100%; //여기서 height는 부모인 0이 아니라 그냥 크기 자체인 100%를 따른다
+      object-fit: cover;
     }
   }
 
