--- a/styles/components/_product-recommendation.scss
+++ b/styles/components/_product-recommendation.scss
@@ -21,7 +21,7 @@
       &:active,
       &:hover {
         img {
-          transform: scale(1.1);
+          transform: translate(-50%, -50%) scale(1.1);
         }
 
         .product-card-title {
