--- a/styles/main.scss
+++ b/styles/main.scss
@@ -17,6 +17,7 @@
 @import './mixins/flexbox';
 @import './mixins/scrollbar';
 @import './mixins/star-ratings';
+@import './mixins/line-clamp';
 
 @import './modules/icon';
 @import './modules/tags';
