--- a/styles/main.scss
+++ b/styles/main.scss
@@ -18,6 +18,7 @@
 @import './mixins/scrollbar';
 @import './mixins/star-ratings';
 @import './mixins/line-clamp';
+@import './mixins/truncate';
 
 @import './modules/icon';
 @import './modules/tags';
@@ -50,6 +51,7 @@
 @import './components/product-shipment';
 @import './components/product-card';
 @import './components/product-recommendation';
+@import './components/gallery';
 
 @import './layouts/grid';
 @import './layouts/gnb';
