--- a/styles/components/_gallery.scss
+++ b/styles/components/_gallery.scss
@@ -4,10 +4,16 @@
   overflow: hidden;
 
   &-image {
+    position: relative;
+    width: 100%;
+    height: 0;
+    padding-bottom: 100%;
     img {
+      @include position-center;
       display: block;
       width: 100%;
-      height: auto;
+      height: 100%;
+      object-fit: cover;
     }
   }
 
