--- a/styles/main.scss
+++ b/styles/main.scss
@@ -52,6 +52,7 @@
 @import './components/product-card';
 @import './components/product-recommendation';
 @import './components/gallery';
+@import './components/user-gallery';
 
 @import './layouts/grid';
 @import './layouts/gnb';
