✨ Implement user gallery thumbnail and its control

--- a/styles/components/_user-gallery.scss
+++ b/styles/components/_user-gallery.scss
@@ -1,20 +1,73 @@
 .user-gallery {
   margin: 0 -#{$grid-margin};
+  overflow: hidden;
 
   &-slider {
+    position: relative;
     margin-bottom: 4px;
   }
 
-  .thumnail-list {
-    @include flexbox(start);
-    padding-left: 2px;
+  &-controls {
+    @include position-center;
+    @include flexbox(between);
+    width: 100%;
+    padding: 0 52px;
+
+    .control-button {
+      @include flexbox;
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      font-size: 30px;
+      transition: background-color 100ms ease-in-out, color 100ms ease-in-out;
+      background-color: $white;
+      color: $black;
+
+      &.is-prev {
+        i {
+          transform: rotate(90deg);
+        }
+      }
+
+      &.is-next {
+        i {
+          margin-right: -2px;
+          transform: rotate(-90deg);
+        }
+      }
+
+      &:hover {
+        background-color: $blue;
+        color: $white;
+      }
+
+      &:disabled {
+        visibility: hidden;
+      }
+    }
   }
 
-  .thumnail-item {
+  .thumbnail-list {
+    @include flexbox(start);
+    padding-left: 2px;
+    overflow-x: auto;
+
+    &::-webkit-scrollbar {
+      display: none;
+    }
+  }
+
+  .thumbnail-item {
     margin-right: 4px;
 
     &:last-child {
       margin-right: 0;
+    }
+
+    &.tns-nav-active {
+      button {
+        border: 3px solid $blue;
+      }
     }
 
     button {
@@ -26,13 +79,9 @@
 
       img {
         display: block;
-        width: 100%;
-        height: 100%;
+        width: 64px;
+        height: 64px;
         object-fit: cover;
-      }
-
-      &.tns-nav-active {
-        border: 3px solid $blue;
       }
     }
   }
@@ -44,14 +93,19 @@
       margin-bottom: 6px;
     }
 
-    .thumnail-list {
+    .thumbnail-list {
       padding-left: 0;
     }
 
-    .thumnail-item {
+    .thumbnail-item {
       button {
         width: 75px;
         height: 75px;
+
+        img {
+          width: 75px;
+          height: 75px;
+        }
       }
     }
   }
