--- a/styles/layouts/_product-tab.scss
+++ b/styles/layouts/_product-tab.scss
@@ -43,6 +43,7 @@
   @include responsive(T) {
     top: $gnb-height-md + $lnb-height-md - 1px;
     height: 54px;
+    margin: 40px 0;
     background-color: $background;
     border-bottom: 0;
 
