--- a/styles/main.scss
+++ b/styles/main.scss
@@ -63,3 +63,4 @@
 @import './layouts/global-foot';
 @import './layouts/global-header';
 @import './layouts/product-tab';
+@import './layouts/order-cta';
