--- a/styles/layouts/_order-cta.scss
+++ b/styles/layouts/_order-cta.scss
@@ -16,6 +16,12 @@
     flex-shrink: 0;
     flex-grow: 0;
 
+    &.is-active {
+      .ic-bookmark-filled {
+        color: $blue;
+      }
+    }
+
     .ic-bookmark {
       font-size: 24px;
     }
