--- a/styles/layouts/_order-form-modal.scss
+++ b/styles/layouts/_order-form-modal.scss
@@ -4,15 +4,22 @@
   bottom: 0;
   left: 0;
   width: 100%;
+  max-height: 75vh;
   background-color: $white;
   z-index: $order-form-modal;
   padding-top: 16px;
+  overflow-y: auto;
   border-radius: 12px 12px 0 0;
   box-shadow: 0px -4px 20px 0px #00000026;
+  overscroll-behavior: contain;
 
   .order-checkout,
   .order-summary {
     margin-bottom: 16px;
+  }
+
+  .order-summary {
+    margin-bottom: calc(48px + 4px * 2 + 16px);
   }
 
   .order-inputs {
@@ -20,8 +27,12 @@
   }
 
   .button-group {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: $white;
     padding: 4px;
-    padding-top: 0;
   }
 
   @include responsive(T) {
