--- a/styles/constants/_dimensions.scss
+++ b/styles/constants/_dimensions.scss
@@ -5,3 +5,8 @@ $lnb-height-sm: 40px;
 $lnb-height-md: 50px;
 
 $order-cta-height: 56px;
+
+$product-tab-height-sm: 40px;
+$product-tab-height-md: 54px;
+
+$global-footer-height: 186px;
