--- a/styles/layouts/_product-tab.scss
+++ b/styles/layouts/_product-tab.scss
@@ -3,7 +3,7 @@
   top: $gnb-height-sm + $lnb-height-sm;
   z-index: $product-rab-level;
   width: 100%;
-  height: 40px;
+  height: $product-tab-height-sm;
   background-color: $white;
   border-bottom: 1px solid $border;
 
@@ -42,7 +42,7 @@
 
   @include responsive(T) {
     top: $gnb-height-md + $lnb-height-md - 1px;
-    height: 54px;
+    height: $product-tab-height-md;
     margin: 40px 0;
     background-color: $background;
     border-bottom: 0;
