--- a/styles/layouts/_floating-order-form.scss
+++ b/styles/layouts/_floating-order-form.scss
@@ -1,7 +1,18 @@
 .floating-order-form {
   @include flexbox(start, start);
+  position: sticky;
+  top: $gnb-height-md + $lnb-height-md + $product-tab-height-md;
   flex-direction: column;
-  height: 700px; //temp
+  padding: 24px 0;
+  min-height: calc(
+    100vh - ($gnb-height-md + $lnb-height-md + $product-tab-height-md) -
+      $global-footer-height
+  );
+
+  max-height: calc(
+    100vh - ($gnb-height-md + $lnb-height-md + $product-tab-height-md)
+  );
+
   > * {
     width: 100%;
   }
