--- a/styles/layouts/_bookmark-toast.scss
+++ b/styles/layouts/_bookmark-toast.scss
@@ -4,6 +4,7 @@
   position: fixed;
   bottom: 0;
   left: 0;
+  display: none;
   width: 100%;
   height: 56px;
   padding-left: $close-button-size;
@@ -11,6 +12,10 @@
   z-index: $bookmark-toast-level;
   background-color: $white;
   box-shadow: $popup-reverserd;
+
+  &.is-active {
+    display: flex;
+  }
 
   .bookmark-title {
     @include text-style(13, $primary);
@@ -32,6 +37,34 @@
 
     a {
       margin-right: 4px;
+    }
+  }
+
+  @include responsive(D) {
+    @include position-center-x(fixed);
+    bottom: 40px;
+    width: 480px;
+    height: 80px;
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: $popup;
+    padding-left: 56px;
+    padding-right: 20px;
+
+    .bookmark-title {
+      @include text-style(16);
+    }
+
+    .close-button {
+      left: calc((56px - $close-button-size) / 2);
+      font-size: 24px;
+      color: $tertiary;
+    }
+
+    .button-group {
+      a {
+        margin-right: 8px;
+      }
     }
   }
 }
